[package]
name = "anaheim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
capture-it = "0.4.1"
chrono = { version = "0.4.24", features = ["serde"]}
config_rs = { version = "0.13.3", package = "config" }
derive-new = "0.5.9"
derive_more = "0.99.17"
hostname = "0.3.1"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["tls-roots"] }
reqwest = { version = "0.11.17", features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.163"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tokio-util = "0.7.8"
tonic = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-opentelemetry = "0.19.0"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
ulid = "1.0.0"