[package]
name = "anaheim-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.16", features = ["visit", "full", "extra-traits"] }
quote = "1.0.27"
proc-macro2 = "1.0.58"
structmeta = "0.2.0"

[dev-dependencies]
anaheim = { path = "../anaheim" }
trybuild = "1.0.80"
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }